# Torah-Tai-Chi

./: .env.example  .gitignore  .mcp.json  .vercelignore  EXECUTION-NOTES.md  TORAH_TAI_CHI_MASTER_PLAN.md  Torah_Tai_Chi_Parsha_Scripts (1) (1).xlsx  Torah_Tai_Chi_Parsha_Scripts.xlsx  modal_app.py  parshiot.json  pyproject.toml  torah-tai-chi-complete-implementation.md  torah-tai-chi-project (1).md  torah-tai-chi-project.md  torah_taichi_project_overview.md
dashboard/: .env.local.example  package-lock.json  package.json  vercel.json
docs/: autopilot-secret.txt  buffer-setup.md  storyblok-migration.md  website-deploy.md
mockups/: analytics.html  calendar.html  channels.html  settings.html  today.html  videos-detail.html  videos.html  website-about.html  website-article-detail.html  website-articles.html  website-home.html  website-video-detail.html  website-videos.html
src/: caption_burner.py  claude_call.py  events.py  frame_extract.py  kie_client.py  models.py  parsha_data.py  script_generator.py  settings.py  stitcher.py  thumbnails.py  topic_pipeline.py  video_generator.py
tests/: test_caption_burner.py  test_frame_extract.py  test_kie_client.py  test_models.py  test_parsha_data.py  test_script_generator.py  test_settings.py  test_stitcher.py  test_video_generator.py
tools/: README.md  backfill_script_tldrs.py  conftest.py  download_moves.py  generate.py  generate_dojo_refs.py  generate_dojo_walkthrough.py  generate_logo.py  generate_references.py  import_parshiot.py  inspect_recent_regens.mjs  iterate_canonical_kippah.py  move_library.py  rewrite_scripts.py  (+17 more)
(+485 files in other folders)
